# Medical-Assistant

./: .bandit.yml  .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .safety-policy.yml  CLAUDE.md  CONTRIBUTING.md  DEDICATED_THREAD_POOL_IMPLEMENTATION.md  GITGUARDIAN_SCAN_REPORT.md  GUIDELINES_SYSTEM_REVIEW.md  INITIAL.md  MedicalAssistant.vbs  RAILWAY_SETUP_COMPLETE.md  README.md  SECURITY_INCIDENT_RESOLVED.md  SECURITY_STATUS_FINAL.md  SETUP_RAILWAY_GUIDELINES.md  SHORTCUTS.md  STT_TESTS_ANALYSIS.md  TASK_PLAN.md  TECHNICAL_DEBT.md  TESTING_IMPLEMENTATION_COMPLETE.md  TESTING_PLAN_SUMMARY.md  THREADING_DESIGN.md  ai.py  ai_processor.py  api_key_manager.py  app.py  app_backup.py  app_initializer.py  audio.py  audio_dialogs.py  build_linux.sh  build_macos.sh  build_windows.bat  build_windows_ci.bat  chat_processor.py  chat_ui.py  (+68 more)
.github/workflows/: build-release.yml  build-test.yml  regression-tests.yml  tests.yml  virustotal-scan.yml
PRPs/: bidirectional-translation.md
config/: README.md  config.default.json  config.development.json  config.production.json  config.testing.json
docs/: BATCH_PROCESSING.md  GITGUARDIAN_MCP_SETUP.md  agent_system.md  database_improvements.md  debug_implementation.md  mcp_integration.md  medication_agent.md  security_features.md  testing_guide.md  testing_implementation_plan.md  testing_quickstart.md  testing_roadmap.md  ui_testing_setup.md
docs/adr/: 001-tkinter-ui-framework.md  002-custom-agents-vs-langchain.md  003-neon-neo4j-rag-architecture.md  004-provider-pattern-stt-tts.md  005-sqlite-local-database.md  README.md  template.md
examples/: agent_demo.py  mcp_config_example.json
hooks/: hook-deepgram.py  hook-pgvector.py  hook-psycopg.py  hook-psycopg_binary.py  hook-psycopg_pool.py  hook-rag.py  hook-tiktoken.py  hook-whisper.py  runtime_hook_linux.py  runtime_hook_macos.py  runtime_hook_windows.py  suppress_console.py
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_windows_ci.bat  create_desktop_shortcut.bat  create_shortcut.vbs  download_ffmpeg.py  fix_guidelines_schema.sql  launch_app.bat  run_guidelines_migration.py  setup_guidelines_db.sql  verify_guidelines_db.py
src/ai/: ai.py  ai_processor.py  chat_context_mixin.py  chat_processor.py  chat_tools_mixin.py  chat_ui_mixin.py  emotion_processor.py  emotion_speaker_analyzer.py  letter_generation.py  logging_utils.py  model_provider.py  prompts.py  rag_feedback.py  rag_processor.py  rag_query.py  rag_response.py  rag_ui.py  soap_generation.py  soap_processor.py  text_processing.py  translation_refiner.py
src/audio/: __init__.py  audio.py  audio_state_manager.py  constants.py  ffmpeg_utils.py  periodic_analysis.py  recording_autosave_manager.py  recording_manager.py  soap_audio_processor.py
src/core/: app.py  app_chat_mixin.py  app_initializer.py  app_settings_mixin.py  autosave_controller.py  command_registry.py  config.py  document_export_controller.py  env_schema.py  interfaces.py  keyboard_shortcuts_controller.py  logs_viewer_controller.py  main.py  microphone_controller.py  navigation_controller.py  periodic_analysis_controller.py  protocols.py  provider_config_controller.py  queue_processing_controller.py  recording_controller.py  recording_recovery_controller.py  service_registry.py  text_processing_controller.py  ui_state_manager.py  window_state_controller.py
src/database/: database.py  database_v2.py  db_manager.py  db_migrations.py  db_pool.py  db_queue_schema.py  migration_definitions.py  schema.py
src/exporters/: __init__.py  base_exporter.py  docx_exporter.py  fhir_config.py  fhir_exporter.py  fhir_resources.py  rag_exporter.py
src/managers/: __init__.py  agent_manager.py  api_key_manager.py  autosave_manager.py  base_provider_manager.py  data_folder_manager.py  file_manager.py  log_manager.py  notification_manager.py  rag_document_manager.py  rag_upload_queue.py  recipient_manager.py  translation_manager.py  translation_session_manager.py  tts_manager.py  vocabulary_manager.py
src/models/: __init__.py  translation_session.py
src/ocr_providers/: __init__.py  azure_document.py  base.py
src/processing/: analysis_storage.py  batch_processing_mixin.py  batch_processor.py  document_generation_mixin.py  document_generators.py  file_processor.py  guidelines_processing_mixin.py  notification_mixin.py  pdf_processor.py  processing_queue.py  queue_types.py  reprocessing_mixin.py  soap_qa.py  task_executor_mixin.py  task_lifecycle_mixin.py  text_processor.py
src/rag/: __init__.py  adaptive_threshold.py  bm25_search.py  cancellation.py  conversation_manager.py  conversation_summarizer.py  document_processor.py  embedding_manager.py  entity_classifier.py  entity_deduplicator.py  exceptions.py  feedback_manager.py  followup_detector.py  graph_data_provider.py  graphiti_client.py  guidelines_chunker.py  guidelines_env.py  guidelines_graphiti_client.py  guidelines_migrations.py  guidelines_models.py  guidelines_retriever.py  guidelines_upload_manager.py  guidelines_vector_store.py  health_manager.py  hybrid_retriever.py  medical_code_lookup.py  medical_dictionaries.py  medical_ner.py  mmr_reranker.py  models.py  neon_migrations.py  neon_vector_store.py  query_expander.py  rag_resilience.py  recommendation_extractor.py  search_config.py  search_syntax_parser.py  simhash.py  streaming_models.py  streaming_retriever.py  (+1 more)
src/settings/: __init__.py  migrate_settings.py  settings.py  (+5 more)
stt_providers/: __init__.py  deepgram.py  elevenlabs.py  groq.py  whisper.py
tests/: README_TKINTER_TESTS.md  TKINTER_UI_TESTS_COMPLETE.md  __init__.py  conftest.py  run_tkinter_ui_tests.py  run_ui_tests.py  test_setup.py  tkinter_test_utils.py
(+547 files in other folders)
