[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | assistant
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = """
    -ra
    --strict-markers
    --ignore=assistant
    --ignore=build
    --ignore=dist
    --doctest-modules
    --doctest-glob=*.md
    --tb=short
    --strict-config
    --cov-branch
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests requiring Qt",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/assistant/*",
    "*/build/*",
    "*/dist/*",
    "setup.py",
    "medical_assistant.spec",
    "run_tests.py",
    "download_ffmpeg.py",
    "create_shortcut.vbs",
    "manage_keys.py",
    "migrate_*.py",
    "suppress_console.py",
    "hook-*.py",
    "runtime_hook_*.py",
]

[tool.coverage.report]
fail_under = 30
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 120

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "assistant",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules that catch the bugs we encountered
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (undefined names, unused imports, etc.)
    "B",      # flake8-bugbear (common bugs)
    "W",      # pycodestyle warnings
    "I",      # isort
]

# Specific rules to always enforce (these catch our bugs)
# F821: undefined name (catches 'logging' used without import)
# F841: unused variable
# B023: function uses loop variable (catches exception variable in closure)

# Ignore some rules that are too noisy for this codebase
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file
    "E731",   # do not assign a lambda expression
    "B008",   # function call in default argument
    "B904",   # raise without from (too noisy)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports and assertions
"tests/**/*.py" = ["F401", "F811", "B011"]
# Init files often have unused imports for re-export
"__init__.py" = ["F401"]
# Config files may have unusual patterns
"conftest.py" = ["F401", "F811"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"